# bf.asm

./: .gitignore  CMakeLists.txt  Makefile  README.md  bf.asm  dos.ld  main.asm  requirements.txt  test.c  test.sh
.circleci/: config.yml
bin_tests/: main.py
dos/: CMakeLists.txt  test  test.asm
samples/: truth.bf
src/: bf.asm
src/16/: io.asm  post.asm  pre.asm  regs.asm  set_script_mem.asm
src/32/: io.asm  pre.asm  regs.asm  set_script_mem.asm
src/64/: io.asm  pre.asm  regs.asm  set_script_mem.asm
tests/: stdout_capture.cpp  test.c
